--- a/matcha/css/style.css
+++ b/matcha/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lobster+Two:ital@0;1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&family=Montserrat:wght@300;500;700&display=swap');
 /* asi mandamos a llamar la raiz de html */
 /* definicion de una variable */
 /* --nombrevariable: valor; */
@@ -78,9 +78,89 @@ header a {
 	border-radius: 5px;
 	margin-right: 10px;
 }
-.sec2 input{
+.input2{
 	height: 50px;
 	width:  300px;
 	border-radius: 5px;
+}
+
+.video {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	width: 30%;
+}
+.video img{
+	height: auto;
+	width: 50px;
 
 }
+.textos h1{ 
+	color: var(--verdematcha);
+	font-family: 'Dancing Script';
+	font-size: 50px;
+ }
+
+ .tercera{
+ 	display: flex;
+ 	justify-content: center;
+ 	align-items: center;
+
+ }
+ .textos{
+ 	width: 30%;
+ 	font-family: 'Lobster Two';
+ 	font-size: 20px;
+ }
+.pa{
+	color: var(--gris);
+	font-family: 'Dancing Script';
+}
+.cuarta {
+	background-color: var(--verdematcha);
+	height: 800px;
+}
+.cuarta a{
+	color: var(--verdeclaro);
+}
+.cuarta h1{
+	font-family:'Dancing Script';
+	font-size: 25px;
+}
+.cuarta h2{
+	font-family: 'Lobster Two';
+	font-size: 20px;
+}
+.hijo1 {
+	display: flex;
+	align-items: center;
+	flex-direction: row;
+	justify-content: space-around;
+	margin: 20px;
+	padding: 20px;
+	height: 350px;
+	}
+.hijo2 {display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: space-around;
+	margin: 20px;
+	padding: 10px;
+	height: 350px;
+}
+.bebe{ background-color:white;
+	height: 89%;
+	width:40%;
+ }
+ .figura{
+ 	width: 50%;
+ 	 }
+.bebe {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+.text {
+	margin-left: 20px;
+}
+
