--- a/matcha/css/style.css
+++ b/matcha/css/style.css
@@ -19,12 +19,11 @@ body{
 	margin-top: 200px;
 	text-align: center;
 }
-.sec2 h1{
+.titulo{
 	color:  var(--verdematcha);
 	font-size: 60px;
 	text-align: center;
-	font-family: 'Lobster Two';
-
+	font-family: 'Dancing Script';
 }
 .sec2 h3{
 	text-align: center;
@@ -33,7 +32,6 @@ body{
 	text-align: center;
 	font-size:20px;
 }
-
 header{
 	display: flex;
 	justify-content: space-between;
@@ -46,7 +44,6 @@ header{
 	top: 0px;
 	height: 100px;
 	background-color: var(--fondo);
-
 }
 header a {
 	color: var(--verdematcha);
@@ -64,11 +61,9 @@ header a {
 .sec2 img{
 	height: 600px;
 }
-
 .gris {
 	color: var(--gris);
 }
-
 .email{
 	background-color: var(--verdematcha);
 	color: white;
@@ -83,7 +78,6 @@ header a {
 	width:  300px;
 	border-radius: 5px;
 }
-
 .video {
 	display: flex;
 	flex-direction: column;
@@ -93,19 +87,16 @@ header a {
 .video img{
 	height: auto;
 	width: 50px;
-
 }
 .textos h1{ 
 	color: var(--verdematcha);
 	font-family: 'Dancing Script';
 	font-size: 50px;
  }
-
  .tercera{
  	display: flex;
  	justify-content: center;
  	align-items: center;
-
  }
  .textos{
  	width: 30%;
@@ -163,4 +154,44 @@ header a {
 .text {
 	margin-left: 20px;
 }
-
+.sexta {
+	width: 90%;
+	margin: 100px;
+}
+.accordion-body a{
+	color: var(--verdeclaro);
+	text-decoration: none;
+}
+.botonfeo{
+	background-color: var(--verdematcha);
+	color: white;
+	height: 55px;
+	width: auto;
+	border-width: 0px;
+	border-radius: 5px;
+	margin-right: 10px;
+}
+.seis2{
+	text-align: center;
+	margin-bottom: 100px;
+	margin-top: 100px;
+	font-family: 'Lobster Two';
+	font-size: 20px;
+}
+.accordion-button{
+	font-family: 'Dancing Script';
+	font-size: 30px;
+	color: var(--verdematcha);
+}
+.simple{
+	color: var(--verdeclaro);
+}
+.quinta{
+	display: flex;
+	flex-direction: column;
+	background-color: var(--verdeclaro);
+	font-family: 'Lobster Two';
+	font-size: 20px;
+	text-align: center;
+	padding: 100px 0px;
+}
